# misc

./: README.md
.github/workflows/: frontend-bun-vite-react-app.yml
aws/evidently/evaluate-feature-vs-batch-evaluate-feature/: README.md  cleanup.py  measure.py  prepare.py
backend/get-started-open-feature/: .gitignore  Makefile  README.md
backend/get-started-open-feature/client/: .env.example  Makefile  appconfig.py  launchdarkly.py  main.py  pyproject.toml
backend/get-started-open-feature/infra/: Makefile  README.md  azure.tf  backend.tf  launchdarkly.tf  variables.tf  versions.tf
frontend/bun-vite-react-app/: .eslintrc.cjs  .prettierrc.yml  README.md  bun.lockb  package.json
frontend/bun-vite-react-app/src/: App.tsx
frontend/react/react-vite-example/: package-lock.json  package.json
frontend/vite-react-shadcn/: README.md  package-lock.json  package.json  tsconfig.app.json
go/gotwi-example/: go.mod  go.sum  main.go
go/proglog/: README.md
infra/terraform-opentofu/: .gitignore  README.md
infra/terraform-opentofu/opentofu/: backend.tf  main.tf  versions.tf
infra/terraform-opentofu/terraform/: main.tf  versions.tf
infra/terraform/run-test-using-mock-provider/: .gitignore  Makefile  README.md
llm/amazon-bedrock/get-started/: README.md
llm/embedding/compare-titan-ada/: README.md
llm/meta/llama3-on-apple-silicon/: README.md  pyproject.toml
llm/meta/llama3-on-apple-silicon/src/llama3_on_apple_silicon/: __init__.py  main.py
llm/preprocess/ginza/: README.md
rust/zero-rust/: .gitignore
skeleton/go-http-api-server/: README.md  compose.yml
(+58 files in other folders)
