[project]
name = "llama3-on-apple-silicon"
version = "0.1.0"
description = "This is a sample project for generating text with Meta's Llama3 on Apple Silicon."
authors = [
    { name = "michimani", email = "michimani210@gmail.com" }
]
dependencies = [
    "torch>=2.3.0",
    "transformers>=4.40.1",
    "mlx-lm>=0.14.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llama3_on_apple_silicon"]
